# MOE

./: .bazelignore  .bazelrc  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  WORKSPACE  workspace_maven_substitutes.bzl
.github/workflows/: ci.yml
client/: BUILD.bazel
client/src/main/java/com/google/devtools/moe/client/: BUILD.bazel  GsonModule.java  MoeModule.java  MoshiModule.kt  SystemCommandRunner.java  SystemFileSystem.java
client/src/main/java/com/google/devtools/moe/client/config/: BUILD.bazel  ConfigParser.kt  EditorConfig.kt  EditorType.kt  MetadataScrubberConfig.kt  MigrationConfig.kt  ProjectConfig.kt  RepositoryConfig.kt  ScrubberConfig.kt  StepConfig.kt  TranslatorConfig.kt  UsernamesConfig.kt  ValidatingConfig.kt
client/src/main/java/com/google/devtools/moe/client/database/: Bookkeeper.java  DbStorage.kt  FileDb.java  RepositoryEquivalence.kt  RepositoryEquivalenceMatcher.java  SubmittedMigration.kt
client/src/main/java/com/google/devtools/moe/client/directives/: CheckConfigDirective.java  DetermineMigrationsDirective.java  GithubPullDirective.java  MagicDirective.java  MigrateBranchDirective.java  NoteEquivalenceDirective.java
client/src/main/java/com/google/devtools/moe/client/dvcs/git/: GitClonedRepository.java  GitClonedRepository.kt  GitRevisionHistory.java  GitRevisionHistory.kt  GitWriter.java
client/src/main/java/com/google/devtools/moe/client/dvcs/hg/: HgClonedRepository.java  HgRevisionHistory.java
client/src/main/java/com/google/devtools/moe/client/github/: BUILD.bazel  GithubAPI.kt  GithubClient.kt  InvalidGithubUrl.kt  PullRequestUrl.kt
client/src/main/java/com/google/devtools/moe/client/migrations/: Migrator.java
client/src/main/java/com/google/devtools/moe/client/moshi/: BUILD.bazel  MoshiModule.kt  MoshiProjectConfigParser.kt  MoshiUsernameConfigParser.kt
client/src/main/java/com/google/devtools/moe/client/options/: MoeOptions.java  OptionsModule.java
client/src/main/java/com/google/devtools/moe/client/project/: FileReadingProjectContextFactory.java  ProjectContext.java  ProjectContextFactory.java
client/src/main/java/com/google/devtools/moe/client/repositories/: AbstractRevisionHistory.java  DescriptionMetadataScrubber.java  Revision.kt  RevisionHistory.kt  RevisionMetadata.java
client/src/main/java/com/google/devtools/moe/client/svn/: SvnRepositoryFactory.java  SvnRevisionHistory.java
client/src/main/java/com/google/devtools/moe/client/testing/: DummyDb.java  DummyRevisionHistory.java  InMemoryProjectContextFactory.java
client/src/main/java/com/google/devtools/moe/client/translation/editors/: Editors.java  RenamingEditor.java  RenamingEditor.kt  ScrubbingEditor.java  ShellEditor.java
client/src/test/java/com/google/devtools/moe/client/: BUILD.bazel  SystemFileSystemTest.java
client/src/test/java/com/google/devtools/moe/client/database/: BUILD.bazel  FileDbTest.java  RepositoryEquivalenceMatcherTest.java  RepositoryEquivalenceTest.java
client/src/test/java/com/google/devtools/moe/client/directives/: BUILD.bazel  BookkeepingDirectiveTest.java  ChangeDirectiveTest.java  CreateCodebaseDirectiveTest.java  DetermineMetadataDirectiveTest.java  FindEquivalenceDirectiveTest.java  GithubPullDirectiveTest.java  HighestRevisionDirectiveTest.java  LastEquivalenceDirectiveTest.java  MigrateBranchDirectiveTest.java  NoteEquivalenceDirectiveTest.java  OneMigrationDirectiveTest.java
client/src/test/java/com/google/devtools/moe/client/dvcs/: AbstractDvcsCodebaseCreatorTest.java  AbstractDvcsCodebaseCreatorTest.kt
client/src/test/java/com/google/devtools/moe/client/dvcs/git/: BUILD.bazel  GitClonedRepositoryTest.kt  GitRevisionHistoryTest.java  GitRevisionHistoryTest.kt  GitWriterTest.kt
client/src/test/java/com/google/devtools/moe/client/dvcs/hg/: BUILD.bazel  HgClonedRepositoryTest.java  HgRevisionHistoryTest.java  HgWriterTest.java
client/src/test/java/com/google/devtools/moe/client/github/: BUILD.bazel  GithubClientTest.java
client/src/test/java/com/google/devtools/moe/client/moshi/: BUILD.bazel  MoshiProjectConfigParserTest.kt
client/src/test/java/com/google/devtools/moe/client/project/: BUILD.bazel  ScrubberConfigTest.java
client/src/test/java/com/google/devtools/moe/client/repositories/: BUILD.bazel  DescriptionMetadataScrubberTest.java  MetadataUsernameScrubberTest.java  OriginalAuthorMetadataScrubberTest.java  PublicSectionMetadataScrubberTest.java  RepositoriesTest.java  RevisionMetadataTest.java  RevisionTest.java
client/src/test/java/com/google/devtools/moe/client/svn/: BUILD.bazel  SvnCodebaseCreatorTest.java  SvnRevisionHistoryTest.java  SvnWriterCreatorTest.java  SvnWriterTest.java
client/src/test/java/com/google/devtools/moe/client/testing/: BUILD.bazel  DummyRevisionHistoryTest.java
client/src/test/java/com/google/devtools/moe/client/translation/editors/: BUILD.bazel  InverseRenamingEditorTest.java  RenamingEditorTest.java  ScrubbingEditorTest.java  ShellEditorTest.java
util/: BUILD.bazel
