load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary", "kt_jvm_library")

package(default_visibility = ["//client:__subpackages__"])

CORE_SRCS = [
    "FileSystem.java",
    "Lifetimes.java",
    "InvalidProject.java",
    "MoeProblem.java",
    "MoeUserProblem.java",
    "NoopFileSystem.java",
    "NoopFileSystemModule.java",
    "Ui.java",
    "Utils.java",
]

java_library(
    name = "core",
    srcs = CORE_SRCS,
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client/qualifiers",
        "@maven//com/google/dagger",
        "@maven//com/google/errorprone:error_prone_annotations",
        "@maven//com/google/guava",
        "@maven//joda-time",
    ],
)

kt_jvm_library(
    name = "client",
    srcs = glob(
        [
            "**/*.java",
            "**/*.kt",
        ],
        exclude = CORE_SRCS,
    ),
    deps = [
        ":core",
        "//client/src/main/java/com/google/devtools/moe/client/codebase/expressions",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "//client/src/main/java/com/google/devtools/moe/client/github",
        "//client/src/main/java/com/google/devtools/moe/client/moshi",
        "//client/src/main/java/com/google/devtools/moe/client/qualifiers",
        "@maven//args4j",
        "@maven//com/google/auto/factory",
        "@maven//com/google/auto/value",
        "@maven//com/google/code/findbugs:jsr305",
        "@maven//com/google/dagger",
        "@maven//com/google/errorprone:error_prone_annotations",
        "@maven//com/google/guava",
        "@maven//com/mikesamuel:json-sanitizer",
        "@maven//com/squareup/moshi",
        "@maven//com/squareup/moshi:moshi-kotlin",
        "@maven//com/squareup/okhttp",
        "@maven//joda-time",
    ],
)
