load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary", "kt_jvm_library")

package(default_visibility = ["//client:__subpackages__"])

kt_jvm_library(
    name = "config",
    srcs = glob([
        "*.java",
        "*.kt",
    ]),
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client:core",
        "@maven//com/google/auto/value",
        "@maven//com/google/code/findbugs:jsr305",
        "@maven//com/google/guava",
        "@maven//com/squareup/moshi",
    ],
)
