load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_binary", "kt_jvm_library")

package(default_visibility = ["//client:__subpackages__"])

kt_jvm_library(
    name = "moshi",
    srcs = glob(["*.kt"]),
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "@maven//com/google/dagger",
        "@maven//com/squareup/moshi",
        "@maven//com/squareup/moshi:moshi-kotlin",
    ],
)
