load("//tools/build_defs:tests.bzl", "jvm_unit_test")

filegroup(
    name = "resources",
    srcs = ["pull_request.json"],
    visibility = ["//client/src/test:__subpackages__"],
)

jvm_unit_test(
    name = "GithubClientTest",
    resources = [":resources"],
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client/github",
        "//client/src/main/java/com/google/devtools/moe/client/moshi",
        "@maven//com/google/guava",
        "@maven//com/google/truth",
        "@maven//com/squareup/okhttp",
        "@maven//junit",
    ],
)
