load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "MoshiProjectConfigParserTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "//client/src/main/java/com/google/devtools/moe/client/moshi",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)
