load("//tools/build_defs:tests.bzl", "jvm_unit_test")

jvm_unit_test(
    name = "ScrubberConfigTest",
    deps = [
        "//client/src/main/java/com/google/devtools/moe/client",
        "//client/src/main/java/com/google/devtools/moe/client/config",
        "//client/src/main/java/com/google/devtools/moe/client/moshi",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)
